<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:persistent="true">

    <PreferenceCategory app:title="Options">

        <ListPreference
            app:entries="@array/theme_entries"
            app:entryValues="@array/theme_values"
            app:key="@string/pref_key_app_theme"
            app:title="Select Theme" />

    </PreferenceCategory>

    <PreferenceCategory app:title="Development Tools">

        <Preference
            app:key="debug_notification"
            app:selectable="true"
            app:title="Notification" />

        <Preference
            app:selectable="true"
            app:title="Review test"
            app:key="debug_review"/>

        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/pref_key_debug_keep_screen_on"
            app:title="Keep device screen on" />


        <SwitchPreference
            app:defaultValue="false"
            app:key="@string/pref_key_debug_reminder"
            app:title="Reminder debugging" />

        <SeekBarPreference
            android:dependency="@string/pref_key_debug_reminder"
            android:max="360"
            app:adjustable="true"
            app:defaultValue="60"
            app:key="@string/pref_key_debug_reminder_today_offset"
            app:min="1"
            app:seekBarIncrement="3"
            app:showSeekBarValue="true"
            app:summary="Adjust time in minutes reminder"
            app:title="Today reminder delay" />

    </PreferenceCategory>

    <PreferenceCategory app:title="About">

        <Preference
            app:key="version"
            app:selectable="false"
            app:title="Version" />

        <Preference
            app:key="feedback"
            app:summary="Share your thoughts or whatever"
            app:title="Send feedback" />

    </PreferenceCategory>

</PreferenceScreen>