<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.dashboard.DashboardFragment">

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/dashboardTaskInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="24dp"
        android:gravity="center_vertical"
        android:hint="@string/chat_input_task_hint"
        android:inputType="textCapSentences"
        android:textSize="20sp"
        android:padding="12dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="match_parent"
        android:layout_height="@dimen/chat_input_actions_height"
        android:layout_marginTop="36dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/dashboardTaskInput">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonActionLater"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/selector_priority_button"
            android:text="@string/chat_action_later"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/buttonActionTomorrow"
            app:layout_constraintTop_toTopOf="parent"
            tools:style="@style/PrioritySelectButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonActionTomorrow"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/selector_priority_button"
            android:text="@string/chat_action_tomorrow"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonActionLater"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toEndOf="@+id/buttonActionToday"
            app:layout_constraintTop_toTopOf="parent"
            tools:style="@style/PrioritySelectButton" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/buttonActionToday"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/selector_priority_button"
            android:text="@string/chat_action_today"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/buttonActionTomorrow"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintHorizontal_chainStyle="spread"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:style="@style/PrioritySelectButton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TextView
        android:id="@+id/dashboard_task_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="3dp"
        android:text="Title:"
        app:layout_constraintBottom_toTopOf="@+id/dashboardTaskInput"
        app:layout_constraintStart_toStartOf="@+id/dashboardTaskInput" />

    <TextView
        android:id="@+id/dashboard_task_title2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="When:"
        app:layout_constraintBottom_toTopOf="@+id/constraintLayout"
        app:layout_constraintStart_toStartOf="@+id/dashboard_task_title" />

    <co.softov.morestuff.android.app.ui.GridRecyclerView
        android:id="@+id/recyclerview_dashboard_options"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="32dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintLayout">

    </co.softov.morestuff.android.app.ui.GridRecyclerView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/dashboardDoneButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:src="@drawable/ic_check_white_24dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        />

</androidx.constraintlayout.widget.ConstraintLayout>