<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@android:color/transparent"
    android:orientation="vertical"
    android:padding="4dp"
    tools:ignore="RtlHardcoded,RtlSymmetry">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/layout_task_list_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="left"
        android:layout_marginStart="10dp"
        android:layout_marginRight="45dp"
        android:background="@drawable/chat_item_app"
        android:elevation="2dp">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/messageAppTaskTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginTop="4dp"
            android:gravity="start"
            android:minEms="3"
            android:paddingStart="8dp"
            android:paddingEnd="8dp"
            android:textColor="?android:attr/textColorPrimary"
            android:textSize="16sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0"
            tools:text="Task Title" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/messageAppTaskTime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/messageAppTaskTitle"
            android:layout_marginTop="2dp"
            android:layout_marginEnd="2dp"
            android:layout_marginBottom="2dp"
            android:layout_toRightOf="@+id/messageAppTaskTitle"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/messageAppTaskTitle"
            tools:text="00:00" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <FrameLayout
        android:id="@+id/layoutAppMessageReply"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginLeft="20dp"
        android:background="@drawable/chat_item_app_sub_item"
        android:orientation="horizontal"
        android:visibility="visible">

        <LinearLayout
            android:id="@+id/layoutAppMessageActions"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical"
            android:minWidth="300dp"
            android:weightSum="1.0">

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/layoutAppMessageActionsSnooze"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/schedule_reply_snooze"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/layoutAppMessageActionsTomorrow"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/schedule_reply_tomorrow"
                android:textSize="16sp"
                android:textStyle="bold" />

            <com.google.android.material.textview.MaterialTextView
                android:id="@+id/layoutAppMessageActionsDone"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_weight="0.33"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:gravity="center"
                android:text="@string/schedule_reply_done"
                android:textSize="16sp"
                android:textStyle="bold" />

        </LinearLayout>

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/textAppMessageReply"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="start|center_vertical"
            android:layout_gravity="center_vertical"
            android:padding="4dp"
            android:textColor="@color/text_user_chat"
            android:textSize="16sp"
            tools:text="Remind me in 1 hour" />

    </FrameLayout>

</LinearLayout>